--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -30,35 +30,26 @@
 <section>
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col-mb-5">
-                <div class="card mx-auto h-100">
-                    <img src="images/paracetamol.jpg" class="card-img-top"/>
-                    <div class="card-body p-4">
-                        <div class="text-center" id="MedName">
-                            <div id="MedName"><h4>Paracetamol</h4></div>
-                            <div id="MedPrice">15.000đ</div>
+            @foreach (var Thuoc in Model._service_thuoc.GetAllThuoc())
+            {
+                <div class="col-mb-5">
+                    <div class="card mx-auto mb-4">
+                        <img src="images/placeholder.png" class="card-img-top" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <div class="h5" id="MedName">@Thuoc.ten</div>
+                                <div id="MedPrice">@($"{Thuoc.don_gia:n0}") &#8363;</div>
+                                <div id="MedID" style="display:none">@Thuoc.thuoc_id</div>
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#" onclick="OnClick_Them()">Thêm vào giỏ hàng</a></div>
                         </div>
                     </div>
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Thêm</a></div>
-                    </div>
                 </div>
-            </div>
-            <div class="col-mb-5">
-                <div class="card mx-auto h-100">
-                    <img src="images/paracetamol.jpg" class="card-img-top" />
-                    <div class="card-body p-4">
-                        <div class="text-center" id="MedName">
-                            <div id="MedName"><h4>Paracetamol</h4></div>
-                            <div id="MedPrice">15.000đ</div>
-                        </div>
-                    </div>
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Thêm</a></div>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </section>
+<script src="~/js/home.js" type="text/javascript"></script>
 
