Fetch image from drugbank.vn

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,6 +8,12 @@ html {
   }
 }
 
+.card-img-top{
+    width:100%;
+    height:20vh;
+    object-fit:cover;
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
