--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -34,7 +34,8 @@
             {
                 <div class="col-mb-5">
                     <div class="card mx-auto mb-4">
-                        <img src="images/placeholder.png" class="card-img-top" />
+                        @{string ImageUrl = Model._service_thuoc.GetThuocImage(Thuoc).Result;}
+                        <img src=@((ImageUrl!="" && ImageUrl != "https://drugbank.vn/api/public/gridfs/")?ImageUrl:"images/placeholder.jpg") class="card-img-top" alt="hinh_thuoc"/>
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <div class="h5" id="MedName">@Thuoc.ten</div>
