--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -30,10 +30,10 @@
 <section>
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            @foreach (var Thuoc in Model._service_thuoc.GetAllThuoc())
+            @foreach (var Thuoc in Model.ListThuoc)
             {
                 <div class="col-mb-5">
-                    <div class="card mx-auto mb-4">
+                    <div class="card mx-auto mb-4 shadow-sm p-3 rounded">
                         @{string ImageUrl = Model._service_thuoc.GetThuocImage(Thuoc).Result;}
                         <img src=@((ImageUrl!="" && ImageUrl != "https://drugbank.vn/api/public/gridfs/")?ImageUrl:"images/placeholder.jpg") class="card-img-top" alt="hinh_thuoc"/>
                         <div class="card-body p-4">
