--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Medicine_Store.styles.css" asp-append-version="true"/>
     <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container header-container">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container px-4 px-lg-5">
                     <a class="navbar-brand" href="#!">Medicine Store</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -33,7 +33,7 @@
         </div>
     </header>
 </head>
-<body>
+<body class="main-body">
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
