--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
 		</li>
 		<li class="navitem">
 			<form class="form-inline" asp-page="/Account/Logout"
-				  asp-route-returnUrl="@Url.Page("/", new {area=""})"
+				  asp-route-returnUrl="/Index"
 				  asp-area="Identity" method="post">
 				<button class="nav-link" btn btn-link text-dark" type="submit">Logout</button>
 			</form>
