--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,6 +18,14 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+.header-container{
+    background-color:lawngreen;
+}
+
+.main-body{
+    background-color:lightskyblue;
+}
+
 html {
   position: relative;
   min-height: 100%;
