--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -11,6 +11,7 @@
 			   asp-page="/Account/Manage/Index" title="Manage">
 				Hello @User.Identity!.Name
 			</a>
+			<div id="UserID" hidden>@UserManager.GetUserId(User)</div>
 		</li>
 		<li class="navitem">
 			<form class="form-inline" asp-page="/Account/Logout"
