--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+<script src="~/js/layout.js" type="text/javascript"></script>
 <ul class="navbar-nav">
 	@if (SignInManager.IsSignedIn(User))
 	{
