Manager page + AddThuoc Page
to do:
_ fix find by hoat chat
_ add soluong + dongia

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             @if(SignInManager.IsSignedIn(User) && Boolean.Parse(User.Claims.FirstOrDefault(x => x.Type == "Admin").Value))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" asp-page="">Store Manager</a>
+                                    <a class="nav-link" aria-current="page" asp-page="/Manage/Index">Store Manager</a>
                                 </li>
                             }
                         </ul>
