--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/Medicine_Store.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/jquery.toast.css"/>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/jquery.toast.js" type="text/javascript"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <header>
