--- a/Pages/Manage/Index.cshtml
+++ b/Pages/Manage/Index.cshtml
@@ -12,6 +12,7 @@
 				<div class="row">
 					<div class="col-sm-7">
 						<input type="text" placeholder="Search"/>
+						<button type="submit" class="btn btn-primary">Tìm</button>
 					</div>
 				</div>
 				<div class="row">
@@ -55,7 +56,7 @@
 									data-soluong="@thuoc.so_luong_ton"
 									data-dongia="@thuoc.don_gia">
 									Edit</button>
-								<button class="btn btn-danger" onclick="OnClick_Delete">Delete</button>
+								<button class="btn btn-danger" onclick="OnClick_Delete(this)">Delete</button>
 							</td>
 						</tr>
 					}
