--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -3,6 +3,10 @@
 @{
 	Layout = null;
 }
+@using Microsoft.AspNetCore.Identity;
+@using Medicine_Store.DAL.Entities;
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 <head>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/cart_modal.css"/>
@@ -18,64 +22,54 @@
                         <div class="col"><h4><b>Giỏ hàng</b></h4></div>
                     </div>
                 </div>
-                <div class="row border-top border-bottom">
-                    <div class="row main align-items-center">
-                        <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/1GrakTl.jpg"></div>
-                        <div class="col">
-                            <div class="row text-muted">Shirt</div>
-                            <div class="row">Cotton T-shirt</div>
+                @foreach(var thuoc in Model.list_thuoc)
+                {
+                    <div class="row border-top border-bottom">
+                        <div class="row main align-items-center">
+                            @{
+                                string ImageUrl = Model.thuoc_service.GetThuocImage(thuoc).Result;
+                            }
+                            <div class="col-2"><img class="img-fluid" src=@((ImageUrl!="" && ImageUrl != "https://drugbank.vn/api/public/gridfs/")?ImageUrl:"images/placeholder.jpg")></div>
+                            <div class="col">
+                                <div class="row text-muted">@thuoc.ten</div>
+                                <div class="row">@thuoc.hoat_chat</div>
+                            </div>
+                            @{
+                                int soluong = @Model.cart_details.FirstOrDefault(detail => detail.thuoc_id == thuoc.thuoc_id).amount;
+                            }
+                            <div class="col">
+                                <a href="#">-</a><a href="#" class="border">@soluong</a><a href="#">+</a>
+                            </div>
+                            <div class="col"> @(thuoc.don_gia * soluong) &#8363;<span class="close">&#10005;</span></div>
                         </div>
-                        <div class="col">
-                            <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a>
-                        </div>
-                        <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="row main align-items-center">
-                        <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/ba3tvGm.jpg"></div>
-                        <div class="col">
-                            <div class="row text-muted">Shirt</div>
-                            <div class="row">Cotton T-shirt</div>
-                        </div>
-                        <div class="col">
-                            <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a>
-                        </div>
-                        <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
-                    </div>
-                </div>
-                <div class="row border-top border-bottom">
-                    <div class="row main align-items-center">
-                        <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/pHQ3xT3.jpg"></div>
-                        <div class="col">
-                            <div class="row text-muted">Shirt</div>
-                            <div class="row">Cotton T-shirt</div>
-                        </div>
-                        <div class="col">
-                            <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a>
-                        </div>
-                        <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
-                    </div>
-                </div>
+                }
                 <div class="back-to-shop"><a asp-page="/Index">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
             </div>
+            @{
+                int tongtien = 0;
+                foreach(var thuoc in Model.list_thuoc)
+                {
+                    tongtien += thuoc.don_gia * Model.cart_details.FirstOrDefault(detail => detail.thuoc_id == thuoc.thuoc_id).amount;
+                }
+            }
             <div class="col-md-4 summary">
                 <div><h5><b>Summary</b></h5></div>
                 <hr>
                 <div class="row">
-                    <div class="col" style="padding-left:0;">Số lượng 3</div>
-                    <div class="col text-right">&euro 132.00</div>
+                    <div class="col" style="padding-left:0;">Số lượng: @Model.cart_details.Count</div>
+                    <div class="col text-right">@tongtien &#8363</div>
                 </div>
                 <form>
                     <p>SHIPPING</p>
                     <select>
-                        <option class="text-muted" value="1">Giao tận nhà - 15,000đ</option>
+                        <option class="text-muted" value="15000">Giao tận nhà - 15,000đ</option>
                         <option class="text-muted" value="2">Nhận tại shop - FREE</option>
                     </select>
                 </form>
                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                     <div class="col">TOTAL PRICE</div>
-                    <div class="col text-right">&euro; 137.00</div>
+                    <div class="col text-right">@(tongtien + 15000)&#8363</div>
                 </div>
                 <button class="btn">CHECKOUT</button>
             </div>
