--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -7,11 +7,15 @@
 @using Medicine_Store.DAL.Entities;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+
 <head>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/cart_modal.css"/>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/css/jquery.toast.css" />
+    <script src="~/js/jquery.toast.js" type="text/javascript"></script>
+    <div id="userid" style="display:none">@UserManager.GetUserId(User)</div>
 </head>
 <body>
     <div class="card">
@@ -26,6 +30,7 @@
                 {
                     <div class="row border-top border-bottom">
                         <div class="row main align-items-center">
+                            <div class="id" style="display:none">@thuoc.thuoc_id</div>
                             @{
                                 string ImageUrl = Model.thuoc_service.GetThuocImage(thuoc).Result;
                             }
@@ -38,9 +43,11 @@
                                 int soluong = @Model.cart_details.FirstOrDefault(detail => detail.thuoc_id == thuoc.thuoc_id).amount;
                             }
                             <div class="col">
-                                <a href="#">-</a><a href="#" class="border">@soluong</a><a href="#">+</a>
+                                <a href="#" onclick="OnClick_Minus(this)">-</a>
+                                <a href="#" class="border amount">@soluong</a>
+                                <a href="#" onclick="OnClick_Plus(this)">+</a>
                             </div>
-                            <div class="col"> @(thuoc.don_gia * soluong) &#8363;<span class="close">&#10005;</span></div>
+                            <div class="col tong_thuoc"> @(thuoc.don_gia * soluong) &#8363;<span class="close">&#10005;</span></div>
                         </div>
                     </div>
                 }
@@ -57,8 +64,8 @@
                 <div><h5><b>Summary</b></h5></div>
                 <hr>
                 <div class="row">
-                    <div class="col" style="padding-left:0;">Số lượng: @Model.cart_details.Count</div>
-                    <div class="col text-right">@tongtien &#8363</div>
+                    <div class="col" style="padding-left:0;">Số lượng: <span id="cart_amount">@Model.cart_details.Count</span></div>
+                    <div class="col text-right" id="tong_summary">@tongtien &#8363</div>
                 </div>
                 <form>
                     <p>SHIPPING</p>
@@ -69,11 +76,12 @@
                 </form>
                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                     <div class="col">TOTAL PRICE</div>
-                    <div class="col text-right">@(tongtien + 15000)&#8363</div>
+                    <div class="col text-right" id="tong_tien">@(tongtien + 15000) &#8363</div>
                 </div>
                 <button class="btn">CHECKOUT</button>
             </div>
         </div>
     </div>
 </body>
+<script src="js/cart.js"></script>
 
