--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <script src="~/js/jquery.toast.js" type="text/javascript"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <header>
         <div class="container header-container">
             <nav class="navbar navbar-expand-lg">
