--- a/Pages/Order/Success.cshtml
+++ b/Pages/Order/Success.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
-@model Medicine_Store.Pages.CartModel
+@model Medicine_Store.Pages.Order.SuccessModel
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-	Layout = null;
+    Layout = null;
 }
 @using Microsoft.AspNetCore.Identity;
 @using Medicine_Store.DAL.Entities;
@@ -12,7 +13,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/cart_modal.css" />
+    <link rel="stylesheet" href="~/css/cart_modal.css"/>
+    <link rel="stylesheet" href="~/css/success.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/css/jquery.toast.css" />
@@ -22,12 +24,22 @@
 <body>
     <div class="card">
         <div class="row">
-            <div class="col-md-8 cart">
+            <div class="col-md-12 cart">
                 <div class="title">
                     <div class="row">
-                        <div class="col"><h4><b>Giỏ hàng</b></h4></div>
+                        <div class="col d-flex justify-content-center"><h4><b>THANH TOÁN THÀNH CÔNG</b></h4></div>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <img class="img-circle" src="~/images/greentick.png" width="10%"/>
                     </div>
                 </div>
+                @{
+                    int tongtien = 0;
+                    foreach (var thuoc in Model.list_thuoc)
+                    {
+                        tongtien += thuoc.don_gia * Model.cart_details.FirstOrDefault(detail => detail.thuoc_id == thuoc.thuoc_id).amount;
+                    }
+                }
                 @foreach (var thuoc in Model.list_thuoc)
                 {
                     <div class="row border-top border-bottom">
@@ -36,7 +48,7 @@
                             @{
                                 string ImageUrl = Model.thuoc_service.GetThuocImage(thuoc).Result;
                             }
-                            <div class="col-2"><img class="img-fluid" src=@((ImageUrl!="" && ImageUrl != "https://drugbank.vn/api/public/gridfs/")?ImageUrl:"images/placeholder.jpg")></div>
+                            <div class="col-2"><img class="img-fluid" src=@((ImageUrl!="" && ImageUrl != "https://drugbank.vn/api/public/gridfs/")?ImageUrl:"../images/placeholder.jpg")></div>
                             <div class="col">
                                 <div class="row text-muted">@thuoc.ten</div>
                                 <div class="row">@thuoc.hoat_chat</div>
@@ -45,46 +57,28 @@
                                 int soluong = @Model.cart_details.FirstOrDefault(detail => detail.thuoc_id == thuoc.thuoc_id).amount;
                             }
                             <div class="col">
-                                <a href="#" onclick="OnClick_Minus(this)">-</a>
                                 <a href="#" class="border amount">@soluong</a>
-                                <a href="#" onclick="OnClick_Plus(this)">+</a>
                             </div>
-                            <div class="col tong_thuoc"> @(thuoc.don_gia * soluong) &#8363;<span class="close">&#10005;</span></div>
+                            <div class="col tong_thuoc"> @(thuoc.don_gia * soluong) &#8363;</div>
                         </div>
                     </div>
                 }
-                <div class="back-to-shop"><a asp-page="/Index">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
-            </div>
-            @{
-                int tongtien = 0;
-                foreach (var thuoc in Model.list_thuoc)
-                {
-                    tongtien += thuoc.don_gia * Model.cart_details.FirstOrDefault(detail => detail.thuoc_id == thuoc.thuoc_id).amount;
-                }
-            }
-            <div class="col-md-4 summary">
-                <div><h5><b>Summary</b></h5></div>
-                <hr>
-                <div class="row">
-                    <div class="col" style="padding-left:0;">Số lượng: <span id="cart_amount">@Model.cart_details.Count</span></div>
-                    <div class="col text-right" id="tong_summary">@tongtien &#8363</div>
-                </div>
-                <p>SHIPPING</p>
-                <select id="select_shipping">
-                    <option class="text-muted" value="15000">Giao tận nhà - 15,000đ</option>
-                    <option class="text-muted" value="0">Nhận tại shop - FREE</option>
-                </select>
                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-                    <div class="col">TOTAL PRICE</div>
+                    <div class="col"><p><b>SHIPPING</b></p></div>
+                    <div class="col">15,000&#8363</div>
+                </div>
+                <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
+                    <div class="col"><b>TOTAL PRICE</b></div>
                     <div class="col text-right" id="tong_tien">@(tongtien + 15000) &#8363</div>
                 </div>
-                <form method="post">
-                    <button type="submit" id="checkout-button" class="btn">CHECKOUT</button>
-                </form>
+                <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
+                    <div class="col"><b>TRANSACTION ID</b></div>
+                    <div class="col text-right">@Model.payment_id</div>
+                </div>
+                <a type="button" class="d-flex justify-content-center btn btn-primary back-to-shop" href="https://localhost:7191">Xác Nhận</a>
             </div>
         </div>
     </div>
 </body>
-<script src="js/cart.js"></script>
 <script src="https://js.stripe.com/v3/"></script>
 </html>
