--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -44,7 +44,8 @@
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Thêm vào giỏ hàng</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto btn_them" href="#">Thêm vào giỏ hàng</a></div>
+                            <div class="text-center"><a class="btn btn-outline-info btn_chitiet" href="#">Chi tiết</a></div>
                         </div>
                     </div>
                 </div>
