Xem đơn hàng trong profile page

--- a/Pages/Order/Cancel.cshtml
+++ b/Pages/Order/Cancel.cshtml
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col">
-                Có lỗi xảy ra khi thanh toán. Bạn có thể xem thông tin đơn hàng tại <a asp-area="Identity" asp-page="/Account/Manage/DonHang">đây</a>
+                Có lỗi xảy ra khi thanh toán. Vui lòng thanh toán lại từ giỏ hàng hoặc xem thông tin đơn hàng tại <a asp-area="Identity" asp-page="/Account/Manage/DonHang">đây</a>
             </div>
         </div>
     </div>
