--- a/Areas/Identity/Pages/Account/Manage/DonHang.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DonHang.cshtml
@@ -28,7 +28,8 @@
 				@foreach (var don_hang in list_donhang)
 				{
 					bool da_thanh_toan = don_hang.da_thanh_toan;
-					<tr class="table-row">
+					<tr class="table-row" data-bs-toggle="modal" data-bs-target="#DonHangModal"
+						data-id="@don_hang.ma_don_hang">
 						<td class="ma_don_hang">@don_hang.ma_don_hang</td>
 						<td class="ngay_thanh_toan">@don_hang.PaymentDate.ToString()</td>
 						<td class="ma_thanh_toan">@don_hang.PaymentID</td>
@@ -46,6 +47,31 @@
 		</table>
 	</div>
 </div>
+<div class="modal fade" id="DonHangModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="form-group modal-body">
+				<label for="id"><b>Mã đơn hàng</b></label>
+				<input id="id" class="form-control" type="text" disabled>
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th scope="col">Tên thuốc</th>
+							<th scope="col">Số lượng</th>
+						</tr>
+					</thead>
+					<tbody id="body_modal">
+						
+					</tbody>
+				</table>
+				<div><b>Trạng thái thanh toán: </b><span id="trangthai"> </span></div>
+				<br>
+				<button id="dialog_edit_button" class="form-control btn btn-secondary" onclick="OnClick_XacNhan()">Xác nhận</button>
+			</div>
+		</div>
+	</div>
+</div>
+<script src="~/js/manage_donhang.js" type="text/javascript"></script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
