--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
+@using X.PagedList;
 
 <div class="container searchbar">
     <form class="form-horizontal" role="form" method="post">
@@ -29,8 +30,8 @@
 </div>
 <section>
     <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            @foreach (var Thuoc in Model.ListThuoc)
+        <div id="cards"class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            @foreach (var Thuoc in Model.ListThuoc.ToPagedList(1, 8).ToList())
             {
                 <div class="col-mb-5">
                     <div class="card mx-auto mb-4 shadow-sm p-3 rounded">
@@ -45,7 +46,7 @@
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto btn_them" href="#">Thêm vào giỏ hàng</a></div>
-                            <div class="text-center"><a class="btn btn-outline-info btn_chitiet" href="#">Chi tiết</a></div>
+                            <div class="text-center"><a class="btn btn-outline-primary my-3 btn_chitiet" href="#">Chi tiết</a></div>
                         </div>
                     </div>
                 </div>
